--- a/css/styless.css
+++ b/css/styless.css
@@ -13,7 +13,7 @@
   --border-color: #757575;
   --blue-color-article: #2196f3e5;
   --backdrop-background: #00000033;
-
+  --input-footer-color: #FFFFFF4D;
   --main-anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* сетка */
   --indent: 30px;
@@ -42,6 +42,13 @@ img {
 }
 address {
   font-style: normal;
+}
+input,
+textarea{
+  outline: none;
+}
+label{
+  cursor: pointer;
 }
 .container {
   width: 1200px;
@@ -284,6 +291,7 @@ address {
 .team svg,
 .clients svg,
 .join svg,
+.mailing svg,
 .modal svg {
   fill: currentColor;
 }
@@ -331,11 +339,16 @@ address {
 .footer .container {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 .adress {
   margin-right: 70px;
 }
-.join-title {
+.join{
+  margin-right: 93px;
+}
+.join-title,
+.mailing-title {
   color: var(--white-color);
   font-weight: 700;
   font-size: 14px;
@@ -364,7 +377,6 @@ address {
   height: 44px;
   transition: background-color var(--main-anim);
 }
-
 .social-join-link:hover,
 .social-join-link:focus {
   background-color: var(--blue-color);
@@ -384,6 +396,32 @@ address {
 }
 .footer.contact {
   color: var(--footercontact-color);
+}
+.mailing{
+width: 570px;
+}
+.mailing-form{
+display: flex;
+justify-content: space-between;
+}
+.mailing-form-field{
+  width: 358px;
+  padding: 15px;
+  background-color: transparent;
+  color: var(--white-color);
+  border: 1px solid var(--input-footer-color);
+  border-radius: 4px;
+  margin-right: 10px;
+  box-shadow: 0px 4px 4px 0px #00000026;
+}
+
+.mailing button{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.submit-text{
+  margin-right: 10px;
 }
 .white {
   color: var(--white-color);
@@ -542,6 +580,7 @@ address {
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024, 0px 1px 3px 0px #0000001f;
+  padding: 40px;
 }
 .modal-close-button {
   position: absolute;
@@ -556,4 +595,102 @@ address {
   justify-content: center;
   align-items: center;
   color: black;
+}
+.modal-title{
+font-family: Roboto;
+font-size: 20px;
+font-weight: 700;
+line-height: 23px;
+letter-spacing: 0.03em;
+text-align: center;
+margin-bottom: 12px;
+color: var(--title-color);
+}
+.modal label{
+  display: block;
+  margin-bottom: 10px;
+}
+.modal .input-name{
+  font-family: Roboto;
+font-size: 12px;
+font-weight: 400;
+line-height: 14px;
+letter-spacing: 0.01em;
+text-align: left;
+margin-bottom: 4px;
+}
+.modal-unit-area,
+.comment-area{
+  display: flex;
+  padding: 11px;
+  align-items: center;
+  border: 1px solid #21212133;
+  border-radius: 4px;
+  color: #212121;
+  transition: border-color var(--main-anim); color: var(--main-anim);
+}
+.modal-unit-area:hover,
+.modal-unit-area:focus{
+border-color: var(--blue-color);
+color: var(--blue-color);
+}
+.modal-icon{
+margin-right: 12px;
+}
+.modal-input-area{
+  border: none;
+}
+.comment-area{
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  color:#212121;
+
+  font-family: var(--main-font);
+  font-weight: 400;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.01em;
+}
+.comment-area:hover,
+.comment-area:focus{
+  border-color: var(--blue-color);
+}
+.checkbox{
+position: absolute;
+opacity: 1;
+	visibility:hidden;
+	pointer-events: initial;
+}
+.agreement{
+position: relative;
+display: flex;
+justify-content: center;
+align-items:center;
+max-width: 425px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 30px;
+}
+.check-icon{
+ position: absolute;
+ left: 0;
+ visibility: hidden;
+ border-radius: 2px;
+}
+.checkbox:checked~.check-icon{
+visibility: visible;
+color: var(--white-color);
+background-color: var(--blue-color);
+}
+.agreement-text{
+  margin-left: 8px;
+}
+.modal .button{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
