--- a/css/styless.css
+++ b/css/styless.css
@@ -13,7 +13,7 @@
   --border-color: #757575;
   --blue-color-article: #2196f3e5;
   --backdrop-background: #00000033;
-  --input-footer-color: #FFFFFF4D;
+  --input-footer-color: #ffffff4d;
   --main-anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* сетка */
   --indent: 30px;
@@ -44,10 +44,10 @@ address {
   font-style: normal;
 }
 input,
-textarea{
+textarea {
   outline: none;
 }
-label{
+label {
   cursor: pointer;
 }
 .container {
@@ -291,8 +291,7 @@ label{
 .team svg,
 .clients svg,
 .join svg,
-.mailing svg,
-.modal svg {
+.mailing svg {
   fill: currentColor;
 }
 .social-team-link {
@@ -339,13 +338,12 @@ label{
 .footer .container {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
 }
 .adress {
   margin-right: 70px;
 }
-.join{
-  margin-right: 93px;
+.join {
+  margin-right: auto;
 }
 .join-title,
 .mailing-title {
@@ -397,14 +395,14 @@ label{
 .footer.contact {
   color: var(--footercontact-color);
 }
-.mailing{
-width: 570px;
+.mailing {
+  width: 570px;
 }
-.mailing-form{
-display: flex;
-justify-content: space-between;
+.mailing-form {
+  display: flex;
+  justify-content: space-between;
 }
-.mailing-form-field{
+.mailing-form-field {
   width: 358px;
   padding: 15px;
   background-color: transparent;
@@ -415,12 +413,12 @@ justify-content: space-between;
   box-shadow: 0px 4px 4px 0px #00000026;
 }
 
-.mailing button{
-display: flex;
-justify-content: center;
-align-items: center;
+.mailing button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.submit-text{
+.submit-text {
   margin-right: 10px;
 }
 .white {
@@ -572,8 +570,8 @@ align-items: center;
 }
 .modal {
   background-color: var(--white-color);
-  min-width: 528px;
-  min-height: 582px;
+  width: 528px;
+  height: 582px;
   border-radius: 4px;
   position: absolute;
   top: 50%;
@@ -594,101 +592,116 @@ align-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
+  fill: black;
+  cursor: pointer;
+  transition: color var(--main-anim);
 }
-.modal-title{
-font-family: Roboto;
-font-size: 20px;
-font-weight: 700;
-line-height: 23px;
-letter-spacing: 0.03em;
-text-align: center;
-margin-bottom: 12px;
-color: var(--title-color);
+.modal-close-button:hover,
+.modal-close-button:focus {
+  fill: var(--blue-color);
 }
-.modal label{
+.modal-title {
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 12px;
+  color: var(--title-color);
+}
+.modal label {
   display: block;
   margin-bottom: 10px;
 }
-.modal .input-name{
+.modal .input-name {
   font-family: Roboto;
-font-size: 12px;
-font-weight: 400;
-line-height: 14px;
-letter-spacing: 0.01em;
-text-align: left;
-margin-bottom: 4px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  text-align: left;
+  margin-bottom: 4px;
 }
 .modal-unit-area,
-.comment-area{
+.comment-area {
   display: flex;
   padding: 11px;
   align-items: center;
   border: 1px solid #21212133;
   border-radius: 4px;
-  color: #212121;
-  transition: border-color var(--main-anim); color: var(--main-anim);
+  fill: var(--title-color);
+  transition: border-color var(--main-anim);
+  fill: var(--main-anim);
 }
 .modal-unit-area:hover,
-.modal-unit-area:focus{
-border-color: var(--blue-color);
-color: var(--blue-color);
+.modal-unit-area:focus,
+.modal-unit-area:focus-within {
+  border-color: var(--blue-color);
+  fill: var(--blue-color);
 }
-.modal-icon{
-margin-right: 12px;
-}
-.modal-input-area{
+
+.modal-input-area {
   border: none;
 }
-.comment-area{
+.comment-area {
   display: block;
   width: 100%;
   height: 120px;
   padding: 12px 16px;
   resize: none;
-  color:#212121;
+  color: #212121;
 
   font-family: var(--main-font);
   font-weight: 400;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.01em;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
 }
+.comment-area:focus-within,
 .comment-area:hover,
-.comment-area:focus{
+.comment-area:focus {
   border-color: var(--blue-color);
 }
-.checkbox{
-position: absolute;
-opacity: 1;
-	visibility:hidden;
-	pointer-events: initial;
+.checkbox {
+  position: absolute;
+  appearance: none;
 }
-.agreement{
-position: relative;
-display: flex;
-justify-content: center;
-align-items:center;
-max-width: 425px;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 30px;
+.agreement {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 425px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
-.check-icon{
- position: absolute;
- left: 0;
- visibility: hidden;
- border-radius: 2px;
+.check-icon {
+  position: absolute;
+  left: 0;
+  visibility: hidden;
+  border-radius: 2px;
 }
-.checkbox:checked~.check-icon{
-visibility: visible;
-color: var(--white-color);
-background-color: var(--blue-color);
+.check-out-icon {
+  transition: fill var(--main-anim);
 }
-.agreement-text{
+.checkbox:focus ~ .check-out-icon,
+.checkbox:hover ~ .check-out-icon {
+  fill: var(--blue-color);
+}
+.checkbox:checked ~ .check-icon {
+  visibility: visible;
+  fill: var(--white-color);
+  background-color: var(--blue-color);
+}
+.agreement-text {
   margin-left: 8px;
 }
-.modal .button{
+.agreement-text a {
+  color: var(--blue-color);
+}
+.modal .button {
   display: flex;
   justify-content: center;
   margin-left: auto;
